# N.E.K.O.

./: .cursorrules  .gitattributes  .gitignore  README.MD  agent_server.py  docker_deploy_guide.md  launcher.py  main_server.py  marked_projects.md  memory_server.py  monitor.py  myprojects.code-workspace  origin_main_server.txt  pyproject.toml  requirements.txt  requirements_monitor.txt  start_servers.bat
brain/: analyzer.py  computer_use.py  deduper.py  mcp_client.py  planner.py  processor.py  task_executor.py
config/: __init__.py  api_providers.json  api_template.py  prompts_chara.py  prompts_sys.py
docker/: .dockerignore  CONFIG_REFERENCE.md  Dockerfile  README_Docker.md  docker-compose.yml  entrypoint.sh  env.template
docs/: README_en.md  README_ja.md
frontend/: .env.example  README.md  TEST_DOCUMENTATION.md  TEST_SUMMARY.md  package-lock.json  package.json  vite.web.config.ts  vitest.config.ts  vitest.setup.ts
main_helper/: core.py  cross_server.py  omni_offline_client.py  omni_realtime_client.py  tts_helper.py
main_logic/: core.py  omni_offline_client.py  omni_realtime_client.py  tts_client.py
main_routers/: __init__.py  agent_router.py  characters_router.py  config_router.py  live2d_router.py  memory_router.py  pages_router.py  shared_state.py  system_router.py  websocket_router.py  workshop_router.py
memory/: recent.py  semantic.py  settings.py
plugin/: PLUGIN_DEVELOPMENT_GUIDE.md  decorators.py  event_base.py  host.py  models.py  plugin_base.py  registry.py  resource_manager.py  server_base.py  settings.py  status.py  user_plugin_server.py
react_web/: .gitignore  README.md  global.d.ts  package-lock.json  package.json  tsconfig.json  vite.components.config.ts  vite.global.config.ts  vite.react-bundle.config.ts  vite.react-dom-client-bundle.config.ts  vite.react_init.config.ts
specs/: launcher.spec  monitor_build.spec
static/: app.js  audio-processor.js  common_dialogs.js  common_ui.js  i18n-i18next.js  i18next-loader.js  live2d-core.js  live2d-emotion.js  live2d-interaction.js  (+8 more)
(+78 files in other folders)
