[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "N.E.K.O"
version = "1.0.0"
description = "N.E.K.O. Desktop"
readme = "README.MD"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi~=0.115.9",
  "websockets~=15.0.1",
  "soxr~=0.5.0",
  "numpy~=1.26.4",
  "pyaudio~=0.2.14",
  "websocket-client~=1.8.0",
  "langchain>=1.0.0,<2.0.0",
  "langchain-core>=1.0.0,<2.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "langchain-community>=0.4.0,<1.0.0",
  "jinja2",
  "dashscope",
  "python-multipart",
  "pillow",
  "pyautogui",
  "gui-agents",
  "pyinstaller>=6.16.0",
]


[tool.hatch.build.targets.wheel]
packages = [
  "brain",
  "config",
  "main_helper",
  "memory",
  "utils",
]

[tool.hatch.build.targets.sdist]
include = [
  "brain",
  "config",
  "main_helper",
  "memory",
  "utils",
  "static",
  "templates",
  "assets",
  "main_server.py",
  "memory_server.py",
  "tool_server.py",
  "monitor.py",
  "README.MD",
  "LICENSE",
]

